[package]
name = "jupyterm"
version = "0.1.0"
description = "A toy implementation of the Jupyter client in Rust."
authors = ["Vinayak Mehta <vmehta94@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
hmac = "0.10.1"
pyo3 = "0.12.3"
serde_json = "1.0"
sha2 = "0.9.1"
zmq = "0.9"
